--- a/WebUI/src/assets/i18n/en_US.json
+++ b/WebUI/src/assets/i18n/en_US.json
@@ -35,6 +35,8 @@
   "COM_HIGH": "high",
   "COM_FULLSCREEN": "FullScreen",
   "COM_FULLSCREEN_EXIT": "FullScreen Exit",
+  "COM_DO_NOT_SHOW_AGAIN": "Do not show again",
+  "SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "HD Mode can result in slower than normal performance on systems with less than 12 GB of VRAM or 24GB of system memory for Intel Core Ultra PCs",
   "SETTINGS_TAB_BASIC": "Basic Settings",
   "SETTINGS_TAB_MODEL": "Models",
   "SETTINGS_INFERENCE_DEVICE": "Inference Device",
