Make Hugging Face token configurable via settings menu (#7)

--- a/WebUI/src/assets/i18n/en_US.json
+++ b/WebUI/src/assets/i18n/en_US.json
@@ -71,6 +71,9 @@
   "SETTINGS_BASIC_LANGUAGE_ZH": "Chinese",
   "SETTINGS_BASIC_PATHS": "Paths",
   "SETTINGS_BASIC_LLM_CHECKPOINTS": "LLM Model Path",
+  "SETTINGS_MODEL_HUGGINGFACE": "Hugging Face",
+  "SETTINGS_MODEL_HUGGINGFACE_API_TOKEN": "API Token",
+  "SETTINGS_MODEL_HUGGINGFACE_INVALID_TOKEN_TEXT": "Please enter a valid token (hf_***).",
   "SETTINGS_MODEL_SD_CHECKPOINTS": "Image Model Path",
   "SETTINGS_MODEL_SD_INPAINT_CHECKPOINTS": "Image Inpaint Model Path",
   "SETTINGS_MODEL_SD_VAE": "Vae Path",
@@ -126,6 +129,10 @@
   "DOWNLOADER_MODEL":"Model",
   "DOWNLOADER_INFO":"Info",
   "DOWNLOADER_FILE_SIZE":"Size",
+  "DOWNLOADER_GATED":"Gated",
+  "DOWNLOADER_GATED_INFO":"Some of the models you are trying to download are gated.",
+  "DOWNLOADER_GATED_TOKEN":"Please add your huggingface.co API token in the settings.",
+  "DOWNLOADER_GATED_ACCEPT":"Please make sure to visit the model info page and request access.",
   "DOWNLOADER_REASON":"Reason",
   "DOWNLOADER_TERMS":"Visit",
   "DOWNLOADER_CONFLICT":"Another download task is currently in progress, and a new task cannot be started. You can cancel the current download task and start a new download task",
