--- a/WebUI/src/assets/i18n/zh_CN.json
+++ b/WebUI/src/assets/i18n/zh_CN.json
@@ -71,6 +71,9 @@
   "SETTINGS_BASIC_LANGUAGE_ZH": "中文",
   "SETTINGS_BASIC_PATHS": "路径",
   "SETTINGS_BASIC_LLM_CHECKPOINTS": "大语言模型路径",
+  "SETTINGS_MODEL_HUGGINGFACE": "Hugging Face",
+  "SETTINGS_MODEL_HUGGINGFACE_API_TOKEN": "API 令牌",
+  "SETTINGS_MODEL_HUGGINGFACE_INVALID_TOKEN_TEXT": "请输入有效的令牌 (hf_***)",
   "SETTINGS_MODEL_SD_CHECKPOINTS": "生图模型路径",
   "SETTINGS_MODEL_SD_INPAINT_CHECKPOINTS": "重绘模型路径",
   "SETTINGS_MODEL_SD_VAE": "Vae模型路径",
@@ -126,6 +129,10 @@
   "DOWNLOADER_MODEL":"模型",
   "DOWNLOADER_INFO":"信息",
   "DOWNLOADER_FILE_SIZE":"文件大小",
+  "DOWNLOADER_GATED":"受限",
+  "DOWNLOADER_GATED_INFO": "您尝试下载的一些模型是受限的。",
+  "DOWNLOADER_GATED_TOKEN": "请在设置中添加您的huggingface.co API令牌。",
+  "DOWNLOADER_GATED_ACCEPT": "请确保访问模型信息页面并申请访问权限。",
   "DOWNLOADER_REASON":"用途",
   "DOWNLOADER_TERMS":"跳转",
   "DOWNLOADER_CONFLICT":"当前有另一个下载任务正在进行，无法启动新任务。您可以取消当前下载任务并启动新下载任务。",
