--- a/WebUI/src/assets/i18n/zh_CN.json
+++ b/WebUI/src/assets/i18n/zh_CN.json
@@ -132,7 +132,7 @@
   "DOWNLOADER_GATED":"受限",
   "DOWNLOADER_GATED_INFO": "您尝试下载的一些模型是受限的。",
   "DOWNLOADER_GATED_TOKEN": "请在设置中添加您的huggingface.co API令牌。",
-  "DOWNLOADER_GATED_ACCEPT": "请确保访问模型信息页面并申请访问权限。",
+  "DOWNLOADER_GATED_ACCEPT":"请确保访问模型信息页面并请求访问权限。如果您未被授予受限模型的访问权限，下载将会失败。",
   "DOWNLOADER_REASON":"用途",
   "DOWNLOADER_TERMS":"跳转",
   "DOWNLOADER_CONFLICT":"当前有另一个下载任务正在进行，无法启动新任务。您可以取消当前下载任务并启动新下载任务。",
