--- a/WebUI/src/assets/i18n/zh_CN.json
+++ b/WebUI/src/assets/i18n/zh_CN.json
@@ -66,6 +66,7 @@
   "SETTINGS_BASIC_LANGUAGE": "语言",
   "SETTINGS_BASIC_LANGUAGE_EN": "英文",
   "SETTINGS_BASIC_LANGUAGE_ZH": "中文",
+  "SETTINGS_BASIC_LANGUAGE_KO": "韩文",
   "SETTINGS_BASIC_PATHS": "路径",
   "SETTINGS_BASIC_LLM_CHECKPOINTS": "大语言模型路径",
   "SETTINGS_MODEL_SD_CHECKPOINTS": "生图模型路径",
