Add Features and Improvements for Lunar Lake Release  (#52)

--- a/WebUI/src/assets/i18n/zh_CN.json
+++ b/WebUI/src/assets/i18n/zh_CN.json
@@ -35,9 +35,12 @@
   "COM_HIGH": "高",
   "COM_FULLSCREEN": "全屏",
   "COM_FULLSCREEN_EXIT": "退出全屏",
+  "COM_DO_NOT_SHOW_AGAIN": "不再显示",
+  "SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "高清模式可能导致性能下降，特别是在显存小于12GB或系统内存小于24GB的Intel Core Ultra PC上。",
   "SETTINGS_TAB_BASIC": "基本设置",
   "SETTINGS_TAB_MODEL": "模型",
   "SETTINGS_INFERENCE_DEVICE": "推理设备",
+  "SETTINGS_MODEL_IMAGE_SIZE": "图片大小",
   "SETTINGS_MODEL_IMAGE_RESOLUTION": "图片分辨率",
   "SETTINGS_MODEL_IMAGE_RESOLUTION_STRANDARD": "标准",
   "SETTINGS_MODEL_IMAGE_RESOLUTION_HD": "高清",
@@ -68,6 +71,9 @@
   "SETTINGS_BASIC_LANGUAGE_ZH": "中文",
   "SETTINGS_BASIC_PATHS": "路径",
   "SETTINGS_BASIC_LLM_CHECKPOINTS": "大语言模型路径",
+  "SETTINGS_MODEL_HUGGINGFACE": "Hugging Face",
+  "SETTINGS_MODEL_HUGGINGFACE_API_TOKEN": "API 令牌",
+  "SETTINGS_MODEL_HUGGINGFACE_INVALID_TOKEN_TEXT": "请输入有效的令牌 (hf_***)",
   "SETTINGS_MODEL_SD_CHECKPOINTS": "生图模型路径",
   "SETTINGS_MODEL_SD_INPAINT_CHECKPOINTS": "重绘模型路径",
   "SETTINGS_MODEL_SD_VAE": "Vae模型路径",
@@ -115,12 +121,18 @@
   "ANSWER_AI_NAME": "Playground",
   "ANSWER_ERROR_NOT_PROMPT": "请输入您的问题",
   "ANSWER_ERROR_CLEAR_SESSION":"清空聊天记录",
+  "INCREASE_FONT_SIZE": "增大字体",
+  "DECRESAE_FONT_SIZE": "减小字体",
   "ANSWER_RAG_ENABLE":"启用文件检索增强(RAG)",
   "ANSWER_RAG_OPEN_DIALOG":"上传文件",
   "DOWNLOADER_CONFRIM_TIP":"您缺少运行所需的一个或多个模型。您想下载以下模型吗？",
   "DOWNLOADER_MODEL":"模型",
   "DOWNLOADER_INFO":"信息",
   "DOWNLOADER_FILE_SIZE":"文件大小",
+  "DOWNLOADER_GATED":"受限",
+  "DOWNLOADER_GATED_INFO": "您尝试下载的一些模型是受限的。",
+  "DOWNLOADER_GATED_TOKEN": "请在设置中添加您的huggingface.co API令牌。",
+  "DOWNLOADER_GATED_ACCEPT":"请确保访问模型信息页面并请求访问权限。如果您未被授予受限模型的访问权限，下载将会失败。",
   "DOWNLOADER_REASON":"用途",
   "DOWNLOADER_TERMS":"跳转",
   "DOWNLOADER_CONFLICT":"当前有另一个下载任务正在进行，无法启动新任务。您可以取消当前下载任务并启动新下载任务。",
@@ -150,5 +162,9 @@
   "ERROR_GENERATE_UNKONW_EXCEPTION": "发生未知错误。模型生成失败。",
   "ERROR_FOLDER_NOT_EXISTS": "指定的文件夹不存在",
   "ERROR_ENHANCE_IMAGE_NOT_SET": "请设置输入图片",
-  "ERROR_UNFOUND_GRAPHICS": "如果未检测到运行此程序所需的硬件，点击确定后程序将终止。"
+  "ERROR_UNFOUND_GRAPHICS": "如果未检测到运行此程序所需的硬件，点击确定后程序将终止。",
+  "ERROR_PYTHON_BACKEND_INIT": "后端初始化失败",
+  "ERROR_PYTHON_BACKEND_INIT_DETAILS_TEXT": "AI 后端初始化失败。请尝试重新启动应用程序。如果问题仍然存在，您可以查看详细信息以获取有关错误的更多信息。",
+  "ERROR_PYTHON_BACKEND_INIT_DETAILS": "详细信息",
+  "ERROR_PYTHON_BACKEND_INIT_OPEN_LOG": "打开日志"
 }
