--- a/WebUI/src/assets/i18n/en_US.json
+++ b/WebUI/src/assets/i18n/en_US.json
@@ -35,9 +35,12 @@
   "COM_HIGH": "high",
   "COM_FULLSCREEN": "FullScreen",
   "COM_FULLSCREEN_EXIT": "FullScreen Exit",
+  "COM_DO_NOT_SHOW_AGAIN": "Do not show again",
+  "SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "HD Mode can result in slower than normal performance on systems with less than 12 GB of VRAM or 24GB of system memory for Intel Core Ultra PCs",
   "SETTINGS_TAB_BASIC": "Basic Settings",
   "SETTINGS_TAB_MODEL": "Models",
   "SETTINGS_INFERENCE_DEVICE": "Inference Device",
+  "SETTINGS_MODEL_IMAGE_SIZE": "Image Size",
   "SETTINGS_MODEL_IMAGE_RESOLUTION": "Image Resolution",
   "SETTINGS_MODEL_IMAGE_RESOLUTION_STRANDARD": "Standard",
   "SETTINGS_MODEL_IMAGE_RESOLUTION_HD": "HD",
@@ -68,6 +71,9 @@
   "SETTINGS_BASIC_LANGUAGE_ZH": "Chinese",
   "SETTINGS_BASIC_PATHS": "Paths",
   "SETTINGS_BASIC_LLM_CHECKPOINTS": "LLM Model Path",
+  "SETTINGS_MODEL_HUGGINGFACE": "Hugging Face",
+  "SETTINGS_MODEL_HUGGINGFACE_API_TOKEN": "API Token",
+  "SETTINGS_MODEL_HUGGINGFACE_INVALID_TOKEN_TEXT": "Please enter a valid token (hf_***).",
   "SETTINGS_MODEL_SD_CHECKPOINTS": "Image Model Path",
   "SETTINGS_MODEL_SD_INPAINT_CHECKPOINTS": "Image Inpaint Model Path",
   "SETTINGS_MODEL_SD_VAE": "Vae Path",
@@ -115,12 +121,18 @@
   "ANSWER_AI_NAME": "Playground",
   "ANSWER_ERROR_NOT_PROMPT": "Please input prompt",
   "ANSWER_ERROR_CLEAR_SESSION":"Clear Chat History",
+  "INCREASE_FONT_SIZE": "Enlarge Text",
+  "DECREASE_FONT_SIZE": "Shrink Text",
   "ANSWER_RAG_ENABLE":"Enable File Query",
   "ANSWER_RAG_OPEN_DIALOG":"Open File Uploader",
   "DOWNLOADER_CONFRIM_TIP":"You are missing one or more models needed to run. Would you like to download the model(s) listed below?",
   "DOWNLOADER_MODEL":"Model",
   "DOWNLOADER_INFO":"Info",
   "DOWNLOADER_FILE_SIZE":"Size",
+  "DOWNLOADER_GATED":"Gated",
+  "DOWNLOADER_GATED_INFO":"Some of the models you are trying to download are gated.",
+  "DOWNLOADER_GATED_TOKEN":"Please add your huggingface.co API token in the settings.",
+  "DOWNLOADER_GATED_ACCEPT":"Please make sure to visit the model info page and request access. If you have not been granted access to a gated model, the download will fail.",
   "DOWNLOADER_REASON":"Reason",
   "DOWNLOADER_TERMS":"Visit",
   "DOWNLOADER_CONFLICT":"Another download task is currently in progress, and a new task cannot be started. You can cancel the current download task and start a new download task",
@@ -150,5 +162,9 @@
   "ERROR_GENERATE_UNKONW_EXCEPTION": "An unknown error occurred. failed to generate from model",
   "ERROR_FOLDER_NOT_EXISTS": "The specified directory does not exist",
   "ERROR_ENHANCE_IMAGE_NOT_SET": "Please configure the input image to be generated",
-  "ERROR_UNFOUND_GRAPHICS": "If the necessary hardware for program execution is not detected on the computer device, the program will terminate upon clicking OK."
+  "ERROR_UNFOUND_GRAPHICS": "If the necessary hardware for program execution is not detected on the computer device, the program will terminate upon clicking OK.",
+  "ERROR_PYTHON_BACKEND_INIT": "Backend initialization failed",
+  "ERROR_PYTHON_BACKEND_INIT_DETAILS_TEXT": "The AI inference backend failed to initialize. Please try restarting the application. If the problem persists, you can check the Details for additional information about the error.",
+  "ERROR_PYTHON_BACKEND_INIT_DETAILS": "Details",
+  "ERROR_PYTHON_BACKEND_INIT_OPEN_LOG": "Open Log"
 }
