Enable Korean localization (#51)
Added localization for Korean.

Signed-off-by: 3ae3ae <ogyshjsm@naver.com>

--- a/WebUI/src/assets/i18n/en_US.json
+++ b/WebUI/src/assets/i18n/en_US.json
@@ -69,6 +69,7 @@
   "SETTINGS_BASIC_LANGUAGE": "Language",
   "SETTINGS_BASIC_LANGUAGE_EN": "English",
   "SETTINGS_BASIC_LANGUAGE_ZH": "Chinese",
+  "SETTINGS_BASIC_LANGUAGE_KO": "Korean",
   "SETTINGS_BASIC_PATHS": "Paths",
   "SETTINGS_BASIC_LLM_CHECKPOINTS": "LLM Model Path",
   "SETTINGS_MODEL_HUGGINGFACE": "Hugging Face",
