Adds llamacpp backend for chat functionality (#32) *Use interface to exchange backends *Add llama cpp backend *Move ipex llm to class
Re-enable RAG for both backends (#32)

llama.cpp and ipex run alternate (#32)

Adjust to llama.cpp branch to upstream changes. Improve UX.

Adds separate Llama cpp service

Update parameters for arc usage

Update gitignore

Uses own llama.cpp backend service for llama.cpp support (#32)

Move llama.cpp out of ipex service (#32)

Makes llama.cpp accessible (#32)

--- a/WebUI/src/assets/i18n/en-US.json
+++ b/WebUI/src/assets/i18n/en-US.json
@@ -53,6 +53,7 @@
   "SETTINGS_TAB_BASIC": "Basic",
   "SETTINGS_TAB_MODEL": "Models",
   "SETTINGS_INFERENCE_DEVICE": "Inference Device",
+  "SETTINGS_LLM_BACKEND": "LLM Backend",
   "SETTINGS_MODEL_IMAGE_SIZE": "Image Size",
   "SETTINGS_MODEL_IMAGE_RESOLUTION": "Image Resolution",
   "SETTINGS_MODEL_IMAGE_RESOLUTION_STRANDARD": "Standard",
