--- a/WebUI/src/assets/i18n/ko.json
+++ b/WebUI/src/assets/i18n/ko.json
@@ -38,6 +38,7 @@
   "SETTINGS_TAB_BASIC": "기본 설정",
   "SETTINGS_TAB_MODEL": "모델",
   "SETTINGS_INFERENCE_DEVICE": "추론 장치",
+  "SETTINGS_LLM_BACKEND": "대규모 언어 모델 백엔드",
   "SETTINGS_MODEL_IMAGE_RESOLUTION": "이미지 해상도",
   "SETTINGS_MODEL_IMAGE_RESOLUTION_STRANDARD": "표준",
   "SETTINGS_MODEL_IMAGE_RESOLUTION_HD": "HD",
