--- a/WebUI/src/assets/i18n/zh-CN.json
+++ b/WebUI/src/assets/i18n/zh-CN.json
@@ -40,6 +40,7 @@
   "SETTINGS_TAB_BASIC": "基本设置",
   "SETTINGS_TAB_MODEL": "模型",
   "SETTINGS_INFERENCE_DEVICE": "推理设备",
+  "SETTINGS_LLM_BACKEND": "大语言模型后端",
   "SETTINGS_MODEL_IMAGE_SIZE": "图片大小",
   "SETTINGS_MODEL_IMAGE_RESOLUTION": "图片分辨率",
   "SETTINGS_MODEL_IMAGE_RESOLUTION_STRANDARD": "标准",
