frontend: refactor language settings

--- a/WebUI/src/assets/i18n/zh-CN.json
+++ b/WebUI/src/assets/i18n/zh-CN.json
@@ -67,9 +67,6 @@
   "SETTINGS_MODEL_SCHEDULER": "采样器",
   "SETTINGS_MODEL_LIST_CHANGE_TIP": "模型列表的变更导致您的某些设置被修改。请参阅基本设置以获取更多信息。",
   "SETTINGS_BASIC_LANGUAGE": "语言",
-  "SETTINGS_BASIC_LANGUAGE_EN": "英文",
-  "SETTINGS_BASIC_LANGUAGE_ZH": "中文",
-  "SETTINGS_BASIC_LANGUAGE_KO": "韩文",
   "SETTINGS_BASIC_PATHS": "路径",
   "SETTINGS_BASIC_LLM_CHECKPOINTS": "大语言模型路径",
   "SETTINGS_MODEL_HUGGINGFACE": "Hugging Face",
@@ -90,7 +87,7 @@
   "SETTINGS_MODEL_DOWNLOAD_DESC":"以下是可以在 AI Playground 中执行各种 AI 任务的模型列表。在下载和使用之前，请查看每个模型的许可条款。也可以通过更改上面的模型路径和默认值，选择添加其他模型来源。",
   "TAB_CREATE": "创作",
   "TAB_ENHANCE": "增强",
-  "TAB_ANSWER": "回答",
+  "TAB_ANSWER": "问答",
   "TAB_LEARN_MORE": "了解更多",
   "ENHANCE_INPUT_IMAGE_REQUIRED": "请在生成之前设置输入图像",
   "ENHANCE_UPSCALE": "放大",
