i18n: fix es.json

--- a/WebUI/src/assets/i18n/es.json
+++ b/WebUI/src/assets/i18n/es.json
@@ -64,9 +64,6 @@
 "SETTINGS_MODEL_SCHEDULER": "Planificación",
 "SETTINGS_MODEL_LIST_CHANGE_TIP": "Los cambios en la lista de modelos han implicado modificaciones en algunas de tus configuraciones. Para más información, consulta las configuraciones básicas.",
 "SETTINGS_BASIC_LANGUAGE": "Idioma",
-"SETTINGS_BASIC_LANGUAGE_EN": "Inglés",
-"SETTINGS_BASIC_LANGUAGE_ZH": "Chino",
-"SETTINGS_BASIC_LANGUAGE_KO": "Coreano",
 "SETTINGS_BASIC_PATHS": "Rutas",
 "SETTINGS_BASIC_LLM_CHECKPOINTS": "Ruta del modelo LLM",
 "SETTINGS_MODEL_SD_CHECKPOINTS": "Ruta del modelo de imagen",
@@ -136,7 +133,7 @@
 "DOWNLOADER_DONWLOAD_TASK_PROGRESS": "Descarga del modelo completada",
 "RAG_FILE_TOTAL_FORMAT": "Archivos totales: {total}",
 "RAG_DRAG_UPLOAD": "Arrastra los archivos para cargar",
-"RAG_DRAG_UPLOAD_UNSUPPORTED": "El programa actual se ejecuta con privilegios de administrador. Debido a las limitaciones de UAC de Windows, no es posible utilizar la carga mediante arrastre. Usa el botón de arriba "Agregar" para cargar los archivos.",
+"RAG_DRAG_UPLOAD_UNSUPPORTED": "El programa actual se ejecuta con privilegios de administrador. Debido a las limitaciones de UAC de Windows, no es posible utilizar la carga mediante arrastre. Usa el botón de arriba \"Agregar\" para cargar los archivos.",
 "RAG_UPLOAD_MIME_TYPE": "Tipos de archivo admitidos: \n\tText Doc: .txt .md\n\tOffice Doc: .doc(x)\n\tPDF Doc: .pdf",
 "RAG_ENABLE_TIP": "Responder solo a los archivos cargados",
 "RAG_UPLOAD_TYPE_ERROR": "El archivo cargado contiene un tipo de archivo no admitido, que ha sido excluido automáticamente.",
