Add runtime-installer improvements
Updated the info ico for the default backend, improved clarity of status states and moved installation/backend management into the basics tab under settings.

Signed-off-by: marijnvg-tng <marijn.vangeest@tngtech.com>

--- a/WebUI/src/assets/i18n/en-US.json
+++ b/WebUI/src/assets/i18n/en-US.json
@@ -97,7 +97,8 @@
   "SETTINGS_MODEL_SD_STANDARD_INPAINT_MODEL": "Standard Default Inpaint/OutPaint Model",
   "SETTINGS_MODEL_SD_HD_MODEL": "HD Default Model",
   "SETTINGS_MODEL_RAG_MODEL": "Rag Query Model",
-  "SETTINGS_MODEL_BACKEND": "Backend Components",
+  "SETTINGS_MODEL_BACKEND": "Inference Backends",
+  "SETTINGS_BACKEND_STATUS": "Backend Status",
   "SETTINGS_MODEL_MANAGE_BACKEND": "Manage Backend Components",
   "SETTINGS_MODEL_EXIST": "The model already exist. Repeating the download is unnecessary.",
   "SETTINGS_MODEL_DOWNLOAD": "Model Download",
