--- a/WebUI/src/assets/i18n/de.json
+++ b/WebUI/src/assets/i18n/de.json
@@ -53,7 +53,7 @@
 "SETTINGS_MODEL_GENERATE_NUMBER": "Generiere Bild Nummer",
 "SETTINGS_MODEL_LLM_MODEL": "Large Language Model",
 "SETTINGS_MODEL_IMAGE_PREVIEW": "Bildvorschau",
-"SETTINGS_MODEL_SAFE_CHECK": "",
+"SETTINGS_MODEL_SAFE_CHECK": "Sicherheitskontrolle (effektiv nur bei SD 1.5)",
 "SETTINGS_MODEL_IMAGE_MODEL": "Bildmodell",
 "SETTINGS_MODEL_INPAINT_MODEL": "Inpaint/Outpaint Modell",
 "SETTINGS_MODEL_IMAGE_WIDTH": "Breite",
@@ -130,7 +130,7 @@
 "DOWNLOADER_FOR_IMAGE_PREVIEW": "Bildvorschau Modell",
 "DOWNLOADER_FOR_IMAGE_UPSCALE": "Bild Upscale Modell",
 "DOWNLOADER_FOR_IMAGE_LORA": "Schnelles Bild Modell",
-"DOWNLOADER_DONWLOAD_TASK_PROGRESS": "Modell Downloads abgeschlossen",
+"DOWNLOADER_DONWLOAD_TASK_PROGRESS": "Download Modell vollständig",
 "RAG_FILE_TOTAL_FORMAT": "Datei total: {total}",
 "RAG_DRAG_UPLOAD": "Ziehen Sie Dateien zum Hochladen",
 "RAG_DRAG_UPLOAD_UNSUPPORTED": "Das aktuelle Programm wird mit Administratorrechten gestartet. Aufgrund von Windows-UAC-Einschränkungen kann der Drag-and-Drop-Upload nicht verwendet werden. Bitte verwenden Sie die Schaltfläche „Hinzufügen“ oben, um Dateien hochzuladen.",
@@ -148,5 +148,21 @@
 "ERROR_GENERATE_UNKONW_EXCEPTION": "Es ist ein unbekannter Fehler aufgetreten. Generierung aus Modell fehlgeschlagen.",
 "ERROR_FOLDER_NOT_EXISTS": "Das angegebene Verzeichnis existiert nicht.",
 "ERROR_ENHANCE_IMAGE_NOT_SET": "Bitte konfigurieren Sie das zu generierende Eingabebild.",
-"ERROR_UNFOUND_GRAPHICS": "Wenn die für die Programmausführung erforderliche Hardware auf dem Computergerät nicht erkannt wird, wird das Programm durch Klicken auf „OK“ beendet."
+"ERROR_UNFOUND_GRAPHICS": "Wenn die für die Programmausführung erforderliche Hardware auf dem Computergerät nicht erkannt wird, wird das Programm durch Klicken auf „OK“ beendet.",
+"COM_DO_NOT_SHOW_AGAIN": "Nucht nochmal anzeigen",
+"SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "Der HD-Modus kann auf Systemen mit weniger als 12 GB VRAM oder 24 GB Systemspeicher bei Intel Core Ultra-PCs zu einer langsameren Leistung als normal führen",
+"SETTINGS_MODEL_IMAGE_SIZE": "Bildgröße",
+"SETTINGS_MODEL_HUGGINGFACE": "Hugging Face",
+"SETTINGS_MODEL_HUGGINGFACE_API_TOKEN": "API Token",
+"SETTINGS_MODEL_HUGGINGFACE_INVALID_TOKEN_TEXT": "Bitte geben Sie einen gültigen Token ein (hf_***).",
+"INCREASE_FONT_SIZE": "Text vergrößern",
+"DECREASE_FONT_SIZE": "Text verkleinern",
+"DOWNLOADER_GATED": "gesperrt",
+"DOWNLOADER_GATED_INFO": "Einige der Modelle, die Sie herunterladen möchten, sind gesperrt.",
+"DOWNLOADER_GATED_TOKEN": "Bitte fügen Sie Ihr huggingface.co API-Token in den Einstellungen hinzu.",
+"DOWNLOADER_GATED_ACCEPT": "Bitte besuchen Sie die Modell-Infoseite und fordern Sie den Zugang an. Wenn Ihnen kein Zugriff auf ein geschlossenes Modell gewährt wurde, schlägt der Download fehl.",
+"ERROR_PYTHON_BACKEND_INIT": "Backend Initialisierung fehlgeschlagen",
+"ERROR_PYTHON_BACKEND_INIT_DETAILS_TEXT": "Das AI-Inferenz-Backend konnte nicht initialisiert werden. Versuchen Sie bitte die Anwendung neu zu starten. Wenn das Problem weiterhin besteht, können Sie in den Details nach weiteren Informationen zum Fehler suchen.",
+"ERROR_PYTHON_BACKEND_INIT_DETAILS": "Details",
+"ERROR_PYTHON_BACKEND_INIT_OPEN_LOG": "Open Log"
 }
