--- a/WebUI/src/assets/i18n/ja.json
+++ b/WebUI/src/assets/i18n/ja.json
@@ -26,10 +26,10 @@
 "COM_CONFIRM": "確認",
 "COM_CANCEL": "キャンセル",
 "COM_VISIT": "VISIT",
-"COM_REQUESTING":"リクエストしています",
-"COM_DEFAULT":"デフォルト",
-"COM_STOP":"停止",
-"COM_OPEN_LOCATION":"場所を開く",
+"COM_REQUESTING": "リクエストしています",
+"COM_DEFAULT": "デフォルト",
+"COM_STOP": "停止",
+"COM_OPEN_LOCATION": "場所を開く",
 "COM_OPEN_PARAMS": "パラメータ情報",
 "COM_LOW": "低",
 "COM_HIGH": "高",
@@ -78,7 +78,7 @@
 "SETTINGS_MODEL_RAG_MODEL": "Rag Queryモデル",
 "SETTINGS_MODEL_EXIST": "モデルはすでに存在します。ダウンロードを繰り返す必要はありません。",
 "SETTINGS_MODEL_DOWNLOAD": "モデルのダウンロード",
-"SETTINGS_MODEL_DOWNLOAD_DESC":"以下は、Al PlaygroundでさまざまなAlタスクを実行できるモデルのリストです。ダウンロードして使用する前に、各モデルの条件を確認してください。または、上記のモデル パスとモデルのデフォルトを変更して、他のモデル ソースを追加して選択することもできます。",
+"SETTINGS_MODEL_DOWNLOAD_DESC": "以下は、Al PlaygroundでさまざまなAlタスクを実行できるモデルのリストです。ダウンロードして使用する前に、各モデルの条件を確認してください。または、上記のモデル パスとモデルのデフォルトを変更して、他のモデル ソースを追加して選択することもできます。",
 "TAB_CREATE": "作成",
 "TAB_ENHANCE": "強化",
 "TAB_ANSWER": "回答",
@@ -104,33 +104,33 @@
 "ENHANCE_OUTPAINT_DIRECTION": "方向",
 "ENHANCE_PREVIEW_BEFORE_PROCESS": "処理前",
 "ENHANCE_PREVIEW_AFTER_PROCESS": "処理後",
-"ENHANCE_IMAGE_PROMPT_TIP":"画像をどのようにスタイル設定するかを説明します。保持したい元の画像の説明と、変更したい点の説明を含めます。影響スライダーを調整して、プロンプトが結果に与える影響を増減します",
-"ENHANCE_INPAINT_TIP":"ペン ツールを使用して領域をマスクします。プロンプトで、修正または塗りつぶしたいものを説明します。[修正] または [塗りつぶし] オプションを選択してから、プロンプトの影響レベルを調整します",
-"ENHANCE_OUTPAINT_TIP":"拡大する方向を選択し、必要に応じてノイズ除去の値を調整し、テキスト ボックスにプロンプトの単語を入力します。拡大画像が生成されます",
-"ENHANCE_UPSCALE_TIP":"操作する必要がある画像をアップロードし、増幅係数を選択し、ノイズ除去の振幅を調整します (0.1 未満の場合、画像の内容は変更されませんが、サイズは拡大されます)。テキスト ボックスにプロンプト ワードを入力して拡大画像を生成します",
+"ENHANCE_IMAGE_PROMPT_TIP": "画像をどのようにスタイル設定するかを説明します。保持したい元の画像の説明と、変更したい点の説明を含めます。影響スライダーを調整して、プロンプトが結果に与える影響を増減します",
+"ENHANCE_INPAINT_TIP": "ペン ツールを使用して領域をマスクします。プロンプトで、修正または塗りつぶしたいものを説明します。[修正] または [塗りつぶし] オプションを選択してから、プロンプトの影響レベルを調整します",
+"ENHANCE_OUTPAINT_TIP": "拡大する方向を選択し、必要に応じてノイズ除去の値を調整し、テキスト ボックスにプロンプトの単語を入力します。拡大画像が生成されます",
+"ENHANCE_UPSCALE_TIP": "操作する必要がある画像をアップロードし、増幅係数を選択し、ノイズ除去の振幅を調整します (0.1 未満の場合、画像の内容は変更されませんが、サイズは拡大されます)。テキスト ボックスにプロンプト ワードを入力して拡大画像を生成します",
 "ERROR_UNSUPPORTED_IMAGE_TYPE": "PNG、JPG、GIF、および BMP の画像形式のみをサポートします",
 "ANSWER_USER_NAME": "あなた",
 "ANSWER_AI_NAME": "プレイグラウンド",
 "ANSWER_ERROR_NOT_PROMPT": "プロンプトを入力してください",
-"ANSWER_ERROR_CLEAR_SESSION":"チャット履歴を消去します",
-"ANSWER_RAG_ENABLE":"ファイル クエリを有効にします",
-"ANSWER_RAG_OPEN_DIALOG":"ファイル アップローダーを開きます",
-"DOWNLOADER_CONFRIM_TIP":"実行に必要なモデルが 1 つ以上ありません。以下にリストされているモデルをダウンロードしますか?",
-"DOWNLOADER_MODEL":"モデル",
-"DOWNLOADER_INFO":"情報",
-"DOWNLOADER_FILE_SIZE":"サイズ",
-"DOWNLOADER_REASON":"理由",
-"DOWNLOADER_TERMS":"訪問",
-"DOWNLOADER_CONFLICT":"現在別のダウンロード タスクが進行中のため、新しいタスクを開始できません。現在のダウンロード タスクをキャンセルして、新しいダウンロード タスクを開始できます",
-"DOWNLOADER_TERMS_TIP":"モデル カードとライセンスを確認しました。すべての利用規約に同意し、サードパーティのモデルをダウンロードします。",
-"DOWNLOADER_FOR_ANSWER_GENERATE":"回答モデル",
-"DOWNLOADER_FOR_RAG_QUERY":"RAG 埋め込みモデル",
-"DOWNLOADER_FOR_IMAGE_GENERATE":"画像モデル",
-"DOWNLOADER_FOR_INAPINT_GENERATE":"インペイント/アウトペイントモデル",
-"DOWNLOADER_FOR_IMAGE_PREVIEW":"画像プレビューモデル",
-"DOWNLOADER_FOR_IMAGE_UPSCALE":"画像アップスケールモデル",
+"ANSWER_ERROR_CLEAR_SESSION": "チャット履歴を消去します",
+"ANSWER_RAG_ENABLE": "ファイル クエリを有効にします",
+"ANSWER_RAG_OPEN_DIALOG": "ファイル アップローダーを開きます",
+"DOWNLOADER_CONFRIM_TIP": "実行に必要なモデルが 1 つ以上ありません。以下にリストされているモデルをダウンロードしますか?",
+"DOWNLOADER_MODEL": "モデル",
+"DOWNLOADER_INFO": "情報",
+"DOWNLOADER_FILE_SIZE": "サイズ",
+"DOWNLOADER_REASON": "理由",
+"DOWNLOADER_TERMS": "訪問",
+"DOWNLOADER_CONFLICT": "現在別のダウンロード タスクが進行中のため、新しいタスクを開始できません。現在のダウンロード タスクをキャンセルして、新しいダウンロード タスクを開始できます",
+"DOWNLOADER_TERMS_TIP": "モデル カードとライセンスを確認しました。すべての利用規約に同意し、サードパーティのモデルをダウンロードします。",
+"DOWNLOADER_FOR_ANSWER_GENERATE": "回答モデル",
+"DOWNLOADER_FOR_RAG_QUERY": "RAG 埋め込みモデル",
+"DOWNLOADER_FOR_IMAGE_GENERATE": "画像モデル",
+"DOWNLOADER_FOR_INAPINT_GENERATE": "インペイント/アウトペイントモデル",
+"DOWNLOADER_FOR_IMAGE_PREVIEW": "画像プレビューモデル",
+"DOWNLOADER_FOR_IMAGE_UPSCALE": "画像アップスケールモデル",
 "DOWNLOADER_FOR_IMAGE_LORA": "高速画像モデル",
-"DOWNLOADER_DONWLOAD_TASK_PROGRESS":"モデルのダウンロードが完了しました",
+"DOWNLOADER_DONWLOAD_TASK_PROGRESS": "モデルのダウンロードが完了しました",
 "RAG_FILE_TOTAL_FORMAT": "ファイルの合計: {total}",
 "RAG_DRAG_UPLOAD": "アップロードするファイルをドラッグしてください",
 "RAG_DRAG_UPLOAD_UNSUPPORTED": "現在のプログラムは管理者権限で起動されています。Windows UAC の制限により、ドラッグ アンド ドロップによるアップロードは使用できません。ファイルをアップロードするには、上部にある追加ボタンを使用してください。",
@@ -141,10 +141,28 @@
 "RAG_ANALYZE_FILE_FAILED": "ファイル {filename} の分析に失敗しました",
 "RAG_USE_REJECT": "インタラクティブ ドキュメント リストが空です。まずドキュメントをアップロードしてください",
 "RAG_WHEN_CLOSE_PANEL_AT_UPLODING": "すべてのドキュメントが分析されるまでお待ちください",
-"RAG_SOURCE": "ソース:", "ERR_NOT_ENOUGH_DISK_SPACE": "ディスク容量が足りません。{requires_space} が必要ですが、使用可能な空き容量は {free_space} のみです",
-"ERR_DOWNLOAD_FAILED": "モデル ファイルのダウンロードに失敗しました", "ERROR_RUNTIME_ERROR": "重大な障害が発生した場合は、プログラムを再起動して再試行してください",
+"RAG_SOURCE": "ソース:",
+"ERR_NOT_ENOUGH_DISK_SPACE": "ディスク容量が足りません。{requires_space} が必要ですが、使用可能な空き容量は {free_space} のみです",
+"ERR_DOWNLOAD_FAILED": "モデル ファイルのダウンロードに失敗しました",
+"ERROR_RUNTIME_ERROR": "重大な障害が発生した場合は、プログラムを再起動して再試行してください",
 "ERROR_GENERATE_UNKONW_EXCEPTION": "不明なエラーが発生しました。モデルから生成できませんでした",
 "ERROR_FOLDER_NOT_EXISTS": "指定されたディレクトリが存在しません",
 "ERROR_ENHANCE_IMAGE_NOT_SET": "生成する入力イメージを設定してください",
-"ERROR_UNFOUND_GRAPHICS": "プログラムの実行に必要なハードウェアがコンピューター デバイス上で検出されない場合、[OK] をクリックするとプログラムは終了します。 "
+"ERROR_UNFOUND_GRAPHICS": "プログラムの実行に必要なハードウェアがコンピューター デバイス上で検出されない場合、[OK] をクリックするとプログラムは終了します。 ",
+"COM_DO_NOT_SHOW_AGAIN": "再び表示しない",
+"SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "12GB以下のVRAMまたは24GB以下のシステムメモリー搭載のCore Utra PCにて、HDモード選択時には通常よりも遅い場合があります",
+"SETTINGS_MODEL_IMAGE_SIZE": "イメージサイズ",
+"SETTINGS_MODEL_HUGGINGFACE": "Hugging Face",
+"SETTINGS_MODEL_HUGGINGFACE_API_TOKEN": "API トークン",
+"SETTINGS_MODEL_HUGGINGFACE_INVALID_TOKEN_TEXT": "有効なトークンを入力してください (hf_***)",
+"INCREASE_FONT_SIZE": "テキスト拡大",
+"DECREASE_FONT_SIZE": "テキスト縮小",
+"DOWNLOADER_GATED": "ゲーテッド(Gated)",
+"DOWNLOADER_GATED_INFO": "ダウンロードを試みているモデルの中にはゲーテッドされているものがあります。",
+"DOWNLOADER_GATED_TOKEN": "設定にて huggingface.co API トークンを入力してください",
+"DOWNLOADER_GATED_ACCEPT": "モデルの情報ページに行きアクセス権を申請してください。承認されていない場合には該当のモデルがゲーテッドされ、ダウンロードできません。",
+"ERROR_PYTHON_BACKEND_INIT": "バックエンド初期化に失敗",
+"ERROR_PYTHON_BACKEND_INIT_DETAILS_TEXT": "AI推論のバックエンド初期化に失敗しました。アプリケーションを再起動してください。問題が再発する様でしたら、詳細にある追加情報を参照ください。",
+"ERROR_PYTHON_BACKEND_INIT_DETAILS": "詳細",
+"ERROR_PYTHON_BACKEND_INIT_OPEN_LOG": "ログを開く"
 }
