--- a/WebUI/src/assets/i18n/vi.json
+++ b/WebUI/src/assets/i18n/vi.json
@@ -26,10 +26,10 @@
 "COM_CONFIRM": "Xác nhận",
 "COM_CANCEL": "Hủy bỏ",
 "COM_VISIT": "Ghé thăm",
-"COM_REQUESTING":"Đang yêu cầu",
-"COM_DEFAULT":"Mặc định",
-"COM_STOP":"Dừng",
-"COM_OPEN_LOCATION":"Mở thư mục",
+"COM_REQUESTING": "Đang yêu cầu",
+"COM_DEFAULT": "Mặc định",
+"COM_STOP": "Dừng",
+"COM_OPEN_LOCATION": "Mở thư mục",
 "COM_OPEN_PARAMS": "Thông tin tham số",
 "COM_LOW": "thấp",
 "COM_HIGH": "cao",
@@ -78,7 +78,7 @@
 "SETTINGS_MODEL_RAG_MODEL": "Mô hình Rag Query",
 "SETTINGS_MODEL_EXIST": "Mô hình đã có sẵn. Việc tải về là không cần thiết.",
 "SETTINGS_MODEL_DOWNLOAD": "Tải về mô hình",
-"SETTINGS_MODEL_DOWNLOAD_DESC":"Dưới đây là danh sách các mô hình AI để hoạt động với AI Playground. Hãy coi các điều khoản của từng mô hình trước khi tải về và sử dụng. Cũng có thể thêm vào các mô hình ở các nguồn khác bằng cách thay đổi đường dẫn đến thư mục chứa mô hình mặc định ở trên.",
+"SETTINGS_MODEL_DOWNLOAD_DESC": "Dưới đây là danh sách các mô hình AI để hoạt động với AI Playground. Hãy coi các điều khoản của từng mô hình trước khi tải về và sử dụng. Cũng có thể thêm vào các mô hình ở các nguồn khác bằng cách thay đổi đường dẫn đến thư mục chứa mô hình mặc định ở trên.",
 "TAB_CREATE": "Tạo ảnh",
 "TAB_ENHANCE": "Cải tiến ảnh",
 "TAB_ANSWER": "Chatbot",
@@ -104,33 +104,33 @@
 "ENHANCE_OUTPAINT_DIRECTION": "Phương hướng",
 "ENHANCE_PREVIEW_BEFORE_PROCESS": "Trước khi xử lý",
 "ENHANCE_PREVIEW_AFTER_PROCESS": "Sau khi xử lý",
-"ENHANCE_IMAGE_PROMPT_TIP":"Mô tả cách bạn muốn hình ảnh được cách điệu. Bao gồm mô tả về hình ảnh gốc mà bạn muốn giữ lại và mô tả về những gì bạn muốn khác biệt. Điều chỉnh thanh trượt ảnh hưởng để tăng hoặc giảm mức độ ảnh hưởng của lời nhắc của bạn đến kết quả",
-"ENHANCE_INPAINT_TIP":"Sử dụng công cụ bút để che một vùng. Mô tả trong lời nhắc những gì bạn muốn Sửa hoặc Tô. Chọn tùy chọn Sửa hoặc Tô, sau đó điều chỉnh mức độ ảnh hưởng mà lời nhắc có",
-"ENHANCE_OUTPAINT_TIP":"Chọn hướng bạn muốn mở rộng, điều chỉnh giá trị khử nhiễu nếu cần và nhập từ nhắc vào hộp văn bản. Hình ảnh mở rộng sẽ được tạo",
-"ENHANCE_UPSCALE_TIP":"Tải ảnh cần xử lý lên, chọn hệ số khuếch đại, điều chỉnh biên độ khử nhiễu (nếu nhỏ hơn 0,1 thì nội dung ảnh không thay đổi nhưng kích thước vẫn tăng), nhập từ khóa vào hộp văn bản để tạo ảnh phóng to.",
+"ENHANCE_IMAGE_PROMPT_TIP": "Mô tả cách bạn muốn hình ảnh được cách điệu. Bao gồm mô tả về hình ảnh gốc mà bạn muốn giữ lại và mô tả về những gì bạn muốn khác biệt. Điều chỉnh thanh trượt ảnh hưởng để tăng hoặc giảm mức độ ảnh hưởng của lời nhắc của bạn đến kết quả",
+"ENHANCE_INPAINT_TIP": "Sử dụng công cụ bút để che một vùng. Mô tả trong lời nhắc những gì bạn muốn Sửa hoặc Tô. Chọn tùy chọn Sửa hoặc Tô, sau đó điều chỉnh mức độ ảnh hưởng mà lời nhắc có",
+"ENHANCE_OUTPAINT_TIP": "Chọn hướng bạn muốn mở rộng, điều chỉnh giá trị khử nhiễu nếu cần và nhập từ nhắc vào hộp văn bản. Hình ảnh mở rộng sẽ được tạo",
+"ENHANCE_UPSCALE_TIP": "Tải ảnh cần xử lý lên, chọn hệ số khuếch đại, điều chỉnh biên độ khử nhiễu (nếu nhỏ hơn 0,1 thì nội dung ảnh không thay đổi nhưng kích thước vẫn tăng), nhập từ khóa vào hộp văn bản để tạo ảnh phóng to.",
 "ERROR_UNSUPPORTED_IMAGE_TYPE": "Chỉ hỗ trợ các định dạng hình ảnh PNG, JPG, GIF và BMP",
 "ANSWER_USER_NAME": "Tên bạn",
 "ANSWER_AI_NAME": "Playground",
 "ANSWER_ERROR_NOT_PROMPT": "Vui lòng nhập lệnh",
-"ANSWER_ERROR_CLEAR_SESSION":"Xóa lịch sử Chat",
-"ANSWER_RAG_ENABLE":"Bật truy vấn tài liệu",
-"ANSWER_RAG_OPEN_DIALOG":"Mở trình tải lên tài liệu",
-"DOWNLOADER_CONFRIM_TIP":"Bạn đang thiếu một hoặc nhiều mô hình cần thiết để chạy. Bạn có muốn tải xuống các mô hình được liệt kê bên dưới không?",
-"DOWNLOADER_MODEL":"Mô hình",
-"DOWNLOADER_INFO":"Thông tin",
-"DOWNLOADER_FILE_SIZE":"Kích thước",
-"DOWNLOADER_REASON":"Nguyên nhân",
-"DOWNLOADER_TERMS":"Ghé thăm",
-"DOWNLOADER_CONFLICT":"Một tác vụ tải xuống khác hiện đang được tiến hành và không thể bắt đầu tác vụ mới. Bạn có thể hủy tác vụ tải xuống hiện tại và bắt đầu tác vụ tải xuống mới",
-"DOWNLOADER_TERMS_TIP":"Tôi đã xem xét thẻ mẫu và giấy phép. Tôi đồng ý với tất cả các điều khoản và điều kiện muốn tải xuống mô hình của bên thứ ba.",
-"DOWNLOADER_FOR_ANSWER_GENERATE":"Mô hình trả lời",
-"DOWNLOADER_FOR_RAG_QUERY":"Mô hình RAG Embed",
-"DOWNLOADER_FOR_IMAGE_GENERATE":"Mô hình tạo ảnh",
-"DOWNLOADER_FOR_INAPINT_GENERATE":"Mô hình cách điệu ảnh",
-"DOWNLOADER_FOR_IMAGE_PREVIEW":"Mô hình xem trước ảnh",
-"DOWNLOADER_FOR_IMAGE_UPSCALE":"Mô hình tăng độ phân giải ảnh",
+"ANSWER_ERROR_CLEAR_SESSION": "Xóa lịch sử Chat",
+"ANSWER_RAG_ENABLE": "Bật truy vấn tài liệu",
+"ANSWER_RAG_OPEN_DIALOG": "Mở trình tải lên tài liệu",
+"DOWNLOADER_CONFRIM_TIP": "Bạn đang thiếu một hoặc nhiều mô hình cần thiết để chạy. Bạn có muốn tải xuống các mô hình được liệt kê bên dưới không?",
+"DOWNLOADER_MODEL": "Mô hình",
+"DOWNLOADER_INFO": "Thông tin",
+"DOWNLOADER_FILE_SIZE": "Kích thước",
+"DOWNLOADER_REASON": "Nguyên nhân",
+"DOWNLOADER_TERMS": "Ghé thăm",
+"DOWNLOADER_CONFLICT": "Một tác vụ tải xuống khác hiện đang được tiến hành và không thể bắt đầu tác vụ mới. Bạn có thể hủy tác vụ tải xuống hiện tại và bắt đầu tác vụ tải xuống mới",
+"DOWNLOADER_TERMS_TIP": "Tôi đã xem xét thẻ mẫu và giấy phép. Tôi đồng ý với tất cả các điều khoản và điều kiện muốn tải xuống mô hình của bên thứ ba.",
+"DOWNLOADER_FOR_ANSWER_GENERATE": "Mô hình trả lời",
+"DOWNLOADER_FOR_RAG_QUERY": "Mô hình RAG Embed",
+"DOWNLOADER_FOR_IMAGE_GENERATE": "Mô hình tạo ảnh",
+"DOWNLOADER_FOR_INAPINT_GENERATE": "Mô hình cách điệu ảnh",
+"DOWNLOADER_FOR_IMAGE_PREVIEW": "Mô hình xem trước ảnh",
+"DOWNLOADER_FOR_IMAGE_UPSCALE": "Mô hình tăng độ phân giải ảnh",
 "DOWNLOADER_FOR_IMAGE_LORA": "Mô hình tạo ảnh nhanh",
-"DOWNLOADER_DONWLOAD_TASK_PROGRESS":"Tải về mô hình hoàn tất",
+"DOWNLOADER_DONWLOAD_TASK_PROGRESS": "Tải về mô hình hoàn tất",
 "RAG_FILE_TOTAL_FORMAT": "Tổng cộng tài liệu: {tổng cộng}",
 "RAG_DRAG_UPLOAD": "Kéo file vào đây để tải lên",
 "RAG_DRAG_UPLOAD_UNSUPPORTED": "Chương trình hiện tại được khởi động với quyền quản trị viên. Do giới hạn UAC của Windows, không thể sử dụng chức năng kéo và thả để tải lên. Vui lòng sử dụng nút thêm ở trên cùng để tải lên tệp.",
@@ -148,5 +148,21 @@
 "ERROR_GENERATE_UNKONW_EXCEPTION": "Đã xảy ra lỗi không xác định. Không thể tạo từ mô hình",
 "ERROR_FOLDER_NOT_EXISTS": "Thư mục được chỉ định không tồn tại",
 "ERROR_ENHANCE_IMAGE_NOT_SET": "Vui lòng cấu hình hình ảnh đầu vào để tạo ra",
-"ERROR_UNFOUND_GRAPHICS": "Nếu phần cứng cần thiết để thực hiện chương trình không được phát hiện trên thiết bị máy tính, chương trình sẽ kết thúc khi nhấp vào OK."
+"ERROR_UNFOUND_GRAPHICS": "Nếu phần cứng cần thiết để thực hiện chương trình không được phát hiện trên thiết bị máy tính, chương trình sẽ kết thúc khi nhấp vào OK.",
+"COM_DO_NOT_SHOW_AGAIN": "Không hiển thị lại",
+"SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "Chế độ HD có thể khiến hiệu suất chậm hơn bình thường trên các hệ thống có VRAM dưới 12 GB hoặc bộ nhớ hệ thống 24 GB cho PC Intel Core Ultra",
+"SETTINGS_MODEL_IMAGE_SIZE": "Kích thước ảnh",
+"SETTINGS_MODEL_HUGGINGFACE": "Hugging Face",
+"SETTINGS_MODEL_HUGGINGFACE_API_TOKEN": "API Token",
+"SETTINGS_MODEL_HUGGINGFACE_INVALID_TOKEN_TEXT": "Vui lòng nhập vào Token đúng (hf_***)",
+"INCREASE_FONT_SIZE": "Tăng cỡ chữ",
+"DECREASE_FONT_SIZE": "Giảm cỡ chữ",
+"DOWNLOADER_GATED": "Cổng tải về",
+"DOWNLOADER_GATED_INFO": "Thông tin cổng tải về",
+"DOWNLOADER_GATED_TOKEN": "Vui lòng bổ sung API Token của huggingface.com trong cài đặt",
+"DOWNLOADER_GATED_ACCEPT": "Hãy đảm bảo truy cập trang thông tin mô hình và yêu cầu quyền truy cập. Nếu bạn chưa được cấp quyền truy cập vào mô hình có cổng, quá trình tải xuống sẽ không thành công.",
+"ERROR_PYTHON_BACKEND_INIT": "Khởi tạo hệ thống nền không thành công",
+"ERROR_PYTHON_BACKEND_INIT_DETAILS_TEXT": "Không thể khởi tạo phần phụ trợ suy luận AI. Vui lòng thử khởi động lại ứng dụng. Nếu sự cố vẫn tiếp diễn, bạn có thể kiểm tra Chi tiết để biết thêm thông tin về lỗi.",
+"ERROR_PYTHON_BACKEND_INIT_DETAILS": "Chi tiết",
+"ERROR_PYTHON_BACKEND_INIT_OPEN_LOG": "Mở lịch sử hoạt động"
 }
