Fix UI of extended downloadDialog
Addition of transitive comfyUI-node model downloads requires additional UI elements.

Signed-off-by: marijnvg-tng <marijn.vangeest@tngtech.com>

--- a/WebUI/src/assets/i18n/en-US.json
+++ b/WebUI/src/assets/i18n/en-US.json
@@ -159,8 +159,9 @@
   "DOWNLOADER_ACCESS_INFO": "You don't have access to some models you want to download",
   "DOWNLOADER_GATED_ACCEPT": "Some of the models are gated. Please make sure to visit the model info page and request access. ",
   "DOWNLOADER_ACCESS_ACCEPT": "Inaccessible models will not be downloaded.",
-  "DOWNLOADER_REASON":"Reason",
+  "DOWNLOADER_REASON":"Type",
   "DOWNLOADER_TERMS":"Visit",
+  "DOWNLOADER_LICENSE":"Terms",
   "DOWNLOADER_CONFLICT":"Another download task is currently in progress, and a new task cannot be started. You can cancel the current download task and start a new download task",
   "DOWNLOADER_TERMS_TIP":"I have reviewed the model card(s) and license(s). I agree to all terms and conditions would like to download the third-party model(s).",
   "DOWNLOADER_FOR_ANSWER_GENERATE":"Answer Model",
