Adding "Open Debug" option in Installation Management and changing the style of the Basic tab
Signed-off-by: julianbollig <julian.bollig@tngtech.com>

--- a/WebUI/src/assets/i18n/en-US.json
+++ b/WebUI/src/assets/i18n/en-US.json
@@ -34,6 +34,7 @@
   "COM_REQUESTING":"Requesting",
   "COM_DEFAULT":"Default",
   "COM_STOP":"Stop",
+  "COM_DEBUG": "Open Developer Logs",
   "COM_OPEN_LOCATION":"Open Location",
   "COM_OPEN_PARAMS": "Parameters Info",
   "COM_LOW": "low",
@@ -84,6 +85,9 @@
   "SETTINGS_BASIC_LANGUAGE": "Language",
   "SETTINGS_BASIC_PATHS": "Paths",
   "SETTINGS_BASIC_LLM_CHECKPOINTS": "LLM Model Path",
+  "SETTINGS_BASIC_GENERAL": "General Settings",
+  "SETTINGS_BASIC_DEVICES": "Devices",
+  "SETTINGS_BASIC_BACKEND": "Backends",
   "SETTINGS_MODEL_HUGGINGFACE": "Hugging Face",
   "SETTINGS_MODEL_HUGGINGFACE_API_TOKEN": "API Token",
   "SETTINGS_MODEL_HUGGINGFACE_INVALID_TOKEN_TEXT": "Please enter a valid token (hf_***).",
@@ -97,7 +101,6 @@
   "SETTINGS_MODEL_SD_STANDARD_INPAINT_MODEL": "Standard Default Inpaint/OutPaint Model",
   "SETTINGS_MODEL_SD_HD_MODEL": "HD Default Model",
   "SETTINGS_MODEL_RAG_MODEL": "Rag Query Model",
-  "SETTINGS_MODEL_BACKEND": "Inference Backends",
   "SETTINGS_BACKEND_STATUS": "Backend Status",
   "SETTINGS_MODEL_MANAGE_BACKEND": "Manage Backend Components",
   "SETTINGS_MODEL_EXIST": "The model already exist. Repeating the download is unnecessary.",
