make all displayed texts translatable and check translation into german
Refs: #43

Signed-off-by: julianbollig <julian.bollig@tngtech.com>

--- a/WebUI/src/assets/i18n/en-US.json
+++ b/WebUI/src/assets/i18n/en-US.json
@@ -23,6 +23,7 @@
   "COM_RESTART": "Restart",
   "COM_START": "Start",
   "COM_DELETE": "Delete",
+  "COM_LOAD_IMAGE" : "Load Image",
   "COM_DOWNLOAD_MODEL": "Downloading model",
   "COM_DOWNLOAD_SPEED": "Download speed",
   "COM_LOADING_MODEL": "Loading AI Model",
@@ -35,7 +36,7 @@
   "COM_DEFAULT":"Default",
   "COM_STOP":"Stop",
   "COM_DEBUG": "Open Developer Logs",
-  "COM_OPEN_LOCATION":"Open Location",
+  "COM_OPEN_LOCATION":"Open in Folder",
   "COM_OPEN_PARAMS": "Parameters Info",
   "COM_LOW": "low",
   "COM_HIGH": "high",
@@ -46,6 +47,9 @@
   "COM_INSTALL_ALL": "Install/Repair all selected",
   "COM_REPAIR": "Repair",
   "COM_CONTINUE": "Continue",
+  "COM_GO_TO_SETUP": "Go to Setup",
+  "COM_LOAD_WORKFLOW_DEFAULTS": "Load workflow defaults",
+  "SETTINGS_THEME": "Theme",
   "SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "HD Mode can result in slower than normal performance on systems with less than 12 GB of VRAM or 24GB of system memory for Intel Core Ultra PCs",
   "SETTINGS_MODEL_WORKFLOW_COMFYUI_CONFIRM": "The use of the workflow mode requires ComfyUI to be installed. This is an optional component that can be installed in the AI Playground Setup.",
   "SETTINGS_MODEL_WORKFLOW_COMFYUI_DOWNLOADING": "Installation in progress...",
@@ -58,7 +62,7 @@
   "SETTINGS_LLM_BACKEND": "LLM Backend",
   "SETTINGS_MODEL_IMAGE_SIZE": "Image Size",
   "SETTINGS_MODEL_IMAGE_RESOLUTION": "Image Resolution",
-  "SETTINGS_MODEL_IMAGE_RESOLUTION_STRANDARD": "Standard",
+  "SETTINGS_MODEL_IMAGE_RESOLUTION_STANDARD": "Standard",
   "SETTINGS_MODEL_IMAGE_RESOLUTION_HD": "HD",
   "SETTINGS_MODEL_QUALITY": "Generate Quality",
   "SETTINGS_MODEL_QUALITY_STANDARD": "Standard",
@@ -72,7 +76,7 @@
   "SETTINGS_MODEL_GENERATE_NUMBER": "Generate Image Number",
   "SETTINGS_MODEL_LLM_MODEL": "Large Language Model",
   "SETTINGS_MODEL_IMAGE_PREVIEW": "Image Preview",
-  "SETTINGS_MODEL_SAFE_CHECK": "Safe Check(Effect only on SD 1.5)",
+  "SETTINGS_MODEL_SAFE_CHECK": "Safe Check",
   "SETTINGS_MODEL_IMAGE_MODEL": "Image Model",
   "SETTINGS_MODEL_INPAINT_MODEL": "Inpaint/Outpaint Model",
   "SETTINGS_MODEL_IMAGE_WIDTH": "Width",
@@ -100,7 +104,7 @@
   "SETTINGS_MODEL_SD_STANDARD_MODEL": "Standard Default Model",
   "SETTINGS_MODEL_SD_STANDARD_INPAINT_MODEL": "Standard Default Inpaint/OutPaint Model",
   "SETTINGS_MODEL_SD_HD_MODEL": "HD Default Model",
-  "SETTINGS_MODEL_RAG_MODEL": "Rag Query Model",
+  "SETTINGS_MODEL_RAG_MODEL": "RAG Query Model",
   "SETTINGS_BACKEND_STATUS": "Backend Status",
   "SETTINGS_MODEL_MANAGE_BACKEND": "Manage Backend Components",
   "SETTINGS_MODEL_EXIST": "The model already exist. Repeating the download is unnecessary.",
@@ -223,8 +227,19 @@
   "BACKEND_STATUS_FAILED": "Failed",
   "SETTINGS_IMAGE_MODE": "Mode",
   "SETTINGS_IMAGE_WORKFLOW": "Workflow",
+  "SETTINGS_IMAGE_DEFAULT": "Default",
+  "SETTINGS_IMAGE_COMFY_REFERENCE_IMAGE": "Reference Image",
+  "SETTINGS_IMAGE_COMFY_FILENAME_PREFIX":  "Filename Prefix",
+  "SETTINGS_IMAGE_COMFY_CANNY_LOW_THRESHOLD": "Canny - Low Threshold",
+  "SETTINGS_IMAGE_COMFY_CANNY_HIGH_THRESHOLD": "Canny - High Threshold",
+  "SETTINGS_IMAGE_COMFY_ACTIVATE_FACESWAP": "Activate FaceSwap",
+  "SETTINGS_IMAGE_COMFY_ORIGINAL_IMAGE": "Original Image",
+  "SETTINGS_IMAGE_COMFY_CONTROLNET_STRENGTH": "ControlNet - Strength",
+  "SETTINGS_IMAGE_COMFY_NEW_FACE_IMAGE": "New Face Image",
   "WORKFLOW_RELOAD_INFO": "Reload workflows from disk.",
   "WORKFLOW_DOWNLOAD_INFO": "Download latest workflows and back up existing workflows.",
   "WORKFLOW_HIGH_VRAM_INFO": "This model requires a lot of VRAM. Reduce the resolution and/or restart the ComfyUI backend when in case you experience a poor performance.",
-  "WORKFLOW_HIGH_VRAM_WARNING": "high VRAM required"
+  "WORKFLOW_HIGH_VRAM_WARNING": "high VRAM required",
+  "LOADING_VERIFYING_BACKENDS" : "Verifying backends",
+  "LOADING_AI_PLAYGROUND_LOADING": "AI Playground Loading"
 }
