#43 - refined the german translation
Signed-off-by: julianbollig <julian.bollig@tngtech.com>

--- a/WebUI/src/assets/i18n/en-US.json
+++ b/WebUI/src/assets/i18n/en-US.json
@@ -114,7 +114,7 @@
   "TAB_ENHANCE": "Enhance",
   "TAB_ANSWER": "Answer",
   "TAB_LEARN_MORE": "Learn More",
-  "ENHANCE_INPUT_IMAGE_REQUIRED": "Please set input image before generate",
+  "ENHANCE_INPUT_IMAGE_REQUIRED": "Please set input image before generating",
   "ENHANCE_UPSCALE": "Upscale",
   "ENHANCE_IMAGE_PROMPT": "Image Prompt",
   "ENHANCE_INPAINT": "Inpaint",
@@ -129,16 +129,16 @@
   "ENHANCE_INPAINT_TYPE": "Type",
   "ENHANCE_INPAINT_FILL": "Fill With Something New",
   "ENHANCE_INPAINT_FIX": "Fix and Repair Masked Area",
-  "ENHANCE_INPAINT_MASK_REQUIRED": "Please draw inpaint mask before generate",
+  "ENHANCE_INPAINT_MASK_REQUIRED": "Please draw the inpaint mask before generating",
   "ENHANCE_INPAINT_USE_IMAGE_MODEL": "Use Current Image Model",
-  "ENHANCE_COM_DENOISE": "Influence",
+  "ENHANCE_COM_DENOISE": "Denoise Strength",
   "ENHANCE_OUTPAINT_DIRECTION": "Direction",
   "ENHANCE_PREVIEW_BEFORE_PROCESS": "Before Process",
   "ENHANCE_PREVIEW_AFTER_PROCESS": "After Process",
-  "ENHANCE_IMAGE_PROMPT_TIP":"Describe how you want the image to be stylized. Include descriptions of the original image you want to keep and descriptions of what you want to be different. Adjust the influence slider to increase or decrease the how much influence your prompt has in the outcome",
-  "ENHANCE_INPAINT_TIP":"Use the pen tool to mask an area. Describe in the prompt what you want to Fix or Fill. Select the Fix or Fill option, then adjust the level of influence the prompt has",
-  "ENHANCE_OUTPAINT_TIP":"Select the direction you want to expand, adjust the value of denoise if necessary, and enter a prompt word in the text box. The expanded image will be generated",
-  "ENHANCE_UPSCALE_TIP":"Upload the image that needs to be manipulated, select the amplification factor, adjust the amplitude of denoise (if less than 0.1, the image content will not change, but the size will still upsacle), enter the prompt word in the text box to generate the enlarged image",
+  "ENHANCE_IMAGE_PROMPT_TIP":"Describe how you want the image to be stylized. Include descriptions of the original image you want to keep and descriptions of what you want to be different. Adjust the denoise slider to increase or decrease the how much influence your prompt has in the outcome",
+  "ENHANCE_INPAINT_TIP":"Use the pen tool to mask an area. Describe in the prompt what you want to fix or fill. Select the fix or fill option, then adjust the level of influence the prompt has",
+  "ENHANCE_OUTPAINT_TIP":"Select the direction you want to expand, adjust the strength of the denoise if necessary, and enter a prompt word in the text box. The expanded image will be generated",
+  "ENHANCE_UPSCALE_TIP":"Upload the image that needs to be manipulated, select the amplification factor, adjust the denoise strength (if less than 0.1, the image content will not change, but the size will still upsacle), enter the prompt word in the text box to generate the enlarged image",
   "ERROR_UNSUPPORTED_IMAGE_TYPE": "Only supports PNG, JPG, GIF, and BMP image formats",
   "ANSWER_USER_NAME": "You",
   "ANSWER_AI_NAME": "Playground",
@@ -193,7 +193,7 @@
   "ERR_NOT_ENOUGH_DISK_SPACE": "Not enough disk space. It requires {requires_space}, but only {free_space} of free space is available",
   "ERR_DOWNLOAD_FAILED": "Download model file failed",
   "ERROR_RUNTIME_ERROR": "If a critical failure occurs, please restart the program and try again",
-  "ERROR_GENERATE_UNKONW_EXCEPTION": "An unknown error occurred. failed to generate from model",
+  "ERROR_GENERATE_UNKONW_EXCEPTION": "An unknown error occurred. Failed to generate from model",
   "ERROR_FOLDER_NOT_EXISTS": "The specified directory does not exist",
   "ERROR_REPO_NOT_EXISTS": "The specified repository-ID could not be found",
   "ERROR_ALREADY_IN_MODELS": "The specified model is already in the list",
@@ -216,7 +216,7 @@
   "BACKEND_REQUIRED": "Required",
   "BACKEND_OPTIONAL": "Optional",
   "BACKEND_REQUIRED_COMPONENTS_MESSAGE": "Before you can use the Intel AI Playground, we need to download some additional components. Please make sure you have a stable and unmetered internet connection.",
-  "BACKEND_OPTIONAL_COMPONENTS_MESSAGE": "Optional components are not required for AI-Playground to work, but provide alternative functions. If you want to use them please click the info buttons to familiarize yourself with their terms and conditions before activating them.",
+  "BACKEND_OPTIONAL_COMPONENTS_MESSAGE": "Optional components are not required for AI Playground to work, but provide alternative functions. If you want to use them please click the info buttons to familiarize yourself with their terms and conditions before activating them.",
   "BACKEND_TERMS_AND_CONDITIONS": "* I have reviewed the optional component. I agree to all terms and conditions and would like to download and enable third-party software if applicable.",
   "BACKEND_STATUS_RUNNING": "Running",
   "BACKEND_STATUS_STOPPING": "Stopping",
