--- a/WebUI/src/assets/i18n/de.json
+++ b/WebUI/src/assets/i18n/de.json
@@ -1,5 +1,5 @@
 {
-  "MAIN_TITLE": "AI-Playground",
+  "MAIN_TITLE": "AI PLAYGROUND",
   "COM_SETTINGS": "Einstellungen",
   "COM_MINI": "Minimieren",
   "COM_CLOSE": "Schließen",
@@ -27,7 +27,7 @@
   "COM_DOWNLOAD_MODEL": "Modell herunterladen",
   "COM_DOWNLOAD_SPEED": "Downloadgeschwindigkeit",
   "COM_LOADING_MODEL": "KI-Modell laden",
-  "COM_LOADING_MODEL_COMPONENTS": "KI-Modell-Komponenten laden",
+  "COM_LOADING_MODEL_COMPONENTS": "Komponenten des KI-Modells laden",
   "COM_NO_SELECTED": "Keine Auswahl",
   "COM_CONFIRM": "Bestätigen",
   "COM_CANCEL": "Abbrechen",
@@ -54,7 +54,7 @@
   "SETTINGS_MODEL_WORKFLOW_COMFYUI_CONFIRM": "Die Verwendung des Workflow-Modus erfordert die Installation von ComfyUI. Dies ist eine optionale Komponente, die im AI-Playground Backend-Manager installiert werden kann.",
   "SETTINGS_MODEL_WORKFLOW_COMFYUI_DOWNLOADING": "Installation im Gange...",
   "SETTINGS_MODEL_WORKFLOW_COMFYUI_COMPLETED": "Installation erfolgreich!",
-  "SETTINGS_MODEL_WORKFLOW_COMFYUI_ERROR": "Installation fehlgeschlagen, wegen",
+  "SETTINGS_MODEL_WORKFLOW_COMFYUI_ERROR": "Installation fehlgeschlagen, aufgrund von",
   "SETTINGS_TAB_IMAGE": "Bild",
   "SETTINGS_TAB_BASIC": "Basis",
   "SETTINGS_TAB_MODEL": "Modelle",
@@ -77,7 +77,7 @@
   "SETTINGS_MODEL_LLM_MODEL": "Großes Sprachmodell",
   "SETTINGS_MODEL_IMAGE_PREVIEW": "Bildvorschau",
   "SETTINGS_MODEL_SAFE_CHECK": "Sicherheitsprüfung",
-  "SETTINGS_MODEL_IMAGE_MODEL": "Bildmodell",
+  "SETTINGS_MODEL_IMAGE_MODEL": "Bild-Modell",
   "SETTINGS_MODEL_INPAINT_MODEL": "Inpaint/Outpaint-Modell",
   "SETTINGS_MODEL_IMAGE_WIDTH": "Bildbreite",
   "SETTINGS_MODEL_IMAGE_HEIGHT": "Bildhöhe",
@@ -85,7 +85,7 @@
   "SETTINGS_MODEL_IMAGE_CFG": "CFG",
   "SETTINGS_MODEL_LORA": "Lora",
   "SETTINGS_MODEL_SCHEDULER": "Scheduler",
-  "SETTINGS_MODEL_LIST_CHANGE_TIP": "Die Änderungen in der Modellliste haben zu Änderungen in einigen Ihrer Einstellungen geführt. Weitere Informationen finden Sie in den Basis-Einstellungen.",
+  "SETTINGS_MODEL_LIST_CHANGE_TIP": "Die Änderungen in der Modell-Liste haben zu Änderungen in einigen Ihrer Einstellungen geführt. Weitere Informationen finden Sie in den Basis-Einstellungen.",
   "SETTINGS_BASIC_LANGUAGE": "Sprache",
   "SETTINGS_BASIC_PATHS": "Pfade",
   "SETTINGS_BASIC_LLM_CHECKPOINTS": "LLM-Modellpfad",
@@ -95,16 +95,16 @@
   "SETTINGS_MODEL_HUGGINGFACE": "Hugging Face",
   "SETTINGS_MODEL_HUGGINGFACE_API_TOKEN": "API-Token",
   "SETTINGS_MODEL_HUGGINGFACE_INVALID_TOKEN_TEXT": "Bitte geben Sie ein gültiges Token (hf_***) ein.",
-  "SETTINGS_MODEL_SD_CHECKPOINTS": "Modelldateipfad",
+  "SETTINGS_MODEL_SD_CHECKPOINTS": "Pfad zum Bildmodell",
   "SETTINGS_MODEL_SD_INPAINT_CHECKPOINTS": "Inpaint/Outpaint-Modellpfad",
   "SETTINGS_MODEL_SD_VAE": "Vae-Pfad",
   "SETTINGS_MODEL_SD_LORA": "Lora-Pfad",
   "SETTINGS_MODEL_SD_SCHEDULER": "Scheduler-Pfad",
-  "SETTINGS_MODEL_SD_PRESET_MODEL": "Bild-Default-Modell",
+  "SETTINGS_MODEL_SD_PRESET_MODEL": "Standard-Bild-Modell",
   "SETTINGS_MODEL_SD_STANDARD_MODEL": "Standard-Default-Modell",
   "SETTINGS_MODEL_SD_STANDARD_INPAINT_MODEL": "Standard-Inpaint/Outpaint-Modell",
   "SETTINGS_MODEL_SD_HD_MODEL": "HD-Default-Modell",
-  "SETTINGS_MODEL_RAG_MODEL": "RAG-Abfrage-Modell",
+  "SETTINGS_MODEL_RAG_MODEL": "RAG-Query-Modell",
   "SETTINGS_BACKEND_STATUS": "Backend-Status",
   "SETTINGS_MODEL_MANAGE_BACKEND": "Backend-Komponenten verwalten",
   "SETTINGS_MODEL_EXIST": "Das Modell existiert bereits. Ein erneuter Download ist nicht notwendig.",
@@ -114,7 +114,7 @@
   "TAB_ENHANCE": "Verbessern",
   "TAB_ANSWER": "Antwort",
   "TAB_LEARN_MORE": "Mehr erfahren",
-  "ENHANCE_INPUT_IMAGE_REQUIRED": "Bitte laden Sie das Input-Bild hoch, bevor Sie generieren",
+  "ENHANCE_INPUT_IMAGE_REQUIRED": "Bitte setzen Sie das Input-Bild vor der Generierung",
   "ENHANCE_UPSCALE": "Auflösung erhöhen",
   "ENHANCE_IMAGE_PROMPT": "Bild-Prompt",
   "ENHANCE_INPAINT": "Inpaint",
@@ -128,17 +128,17 @@
   "ENHANCE_UPSCALE_VARIATION_STRONG": "Stark",
   "ENHANCE_INPAINT_TYPE": "Typ",
   "ENHANCE_INPAINT_FILL": "Mit etwas Neuem füllen",
-  "ENHANCE_INPAINT_FIX": "Reparieren und maskierte Fläche fixen",
-  "ENHANCE_INPAINT_MASK_REQUIRED": "Bitte zeichnen Sie die Inpaint-Maske, bevor Sie generieren",
+  "ENHANCE_INPAINT_FIX": "Reparieren und Korrigieren des maskierten Bereichs",
+  "ENHANCE_INPAINT_MASK_REQUIRED": "Bitte zeichnen Sie die Inpaint-Maske vor der Generierung",
   "ENHANCE_INPAINT_USE_IMAGE_MODEL": "Aktuelles Bildmodell verwenden",
-  "ENHANCE_COM_DENOISE": "Einfluss",
+  "ENHANCE_COM_DENOISE": "Rauschreduktionsfaktor",
   "ENHANCE_OUTPAINT_DIRECTION": "Richtung",
   "ENHANCE_PREVIEW_BEFORE_PROCESS": "Vor dem Prozess",
   "ENHANCE_PREVIEW_AFTER_PROCESS": "Nach dem Prozess",
-  "ENHANCE_IMAGE_PROMPT_TIP": "Beschreiben Sie, wie Sie das Bild stilisieren möchten. Fügen Sie Beschreibungen des Originalbildes hinzu, das Sie beibehalten möchten, und Beschreibungen dessen, was Sie anders haben möchten. Passen Sie den Einfluss-Schieberegler an, um den Einfluss Ihres Prompts auf das Ergebnis zu erhöhen oder zu verringern",
+  "ENHANCE_IMAGE_PROMPT_TIP": "Beschreiben Sie, wie Sie das Bild ausgestalten möchten. Fügen Sie Beschreibungen des Originalbildes hinzu, das Sie beibehalten möchten, und Beschreibungen dessen, was Sie anders haben wollen. Passen Sie den Schieberegler für Rauschunterdrückung an, um den Einfluss Ihres Prompts auf das Ergebnis zu erhöhen oder zu verringern",
   "ENHANCE_INPAINT_TIP": "Verwenden Sie das Pen-Tool, um eine Fläche zu maskieren. Beschreiben Sie im Prompt, was Sie reparieren oder füllen möchten. Wählen Sie die Reparatur- oder Füll-Option und passen Sie den Einfluss des Prompts an",
-  "ENHANCE_OUTPAINT_TIP": "Wählen Sie die Richtung, in die Sie erweitern möchten, passen Sie den Wert von Denoise an, wenn notwendig, und geben Sie ein Prompt-Wort in die Textbox ein. Das erweiterte Bild wird generiert",
-  "ENHANCE_UPSCALE_TIP": "Laden Sie das Bild hoch, das manipuliert werden soll, wählen Sie den Vergrößerungsfaktor, passen Sie die Amplitude von Denoise an (wenn kleiner als 0,1, ändert sich der Bildinhalt nicht, aber die Größe wird immer noch vergrößert), geben Sie das Prompt-Wort in die Textbox ein, um das vergrößerte Bild zu generieren",
+  "ENHANCE_OUTPAINT_TIP": "Wählen Sie die Richtung, in die Sie das Bild erweitern möchten, passen Sie den Wert der Rauschunterdrückung an, wenn notwendig, und geben Sie ein Prompt-Wort in das Textfeld ein. Das hochskalierte Bild wird generiert",
+  "ENHANCE_UPSCALE_TIP": "Laden Sie das Bild hoch, das manipuliert werden soll, wählen Sie den Vergrößerungsfaktor, passen Sie den Rauschreduktionsfaktor an (wenn kleiner als 0,1, ändert sich der Bildinhalt nicht, aber die Größe wird dennoch hochskaliert), geben Sie das Prompt-Wort in das Textfeld ein, um das vergrößerte Bild zu generieren.",
   "ERROR_UNSUPPORTED_IMAGE_TYPE": "Nur PNG-, JPG-, GIF- und BMP-Bildformate werden unterstützt",
   "ANSWER_USER_NAME": "Sie",
   "ANSWER_AI_NAME": "Playground",
@@ -149,22 +149,22 @@
   "ANSWER_RAG_ENABLE": "Datei-Abfrage aktivieren",
   "ANSWER_RAG_OPEN_DIALOG": "Datei-Uploader öffnen",
   "REQUEST_LLM_MODEL_NAME": "Fügen Sie ein Modell Ihrer Wahl von huggingface.co hinzu",
-  "REQUEST_LLM_MODEL_DESCRIPTION": "Sie können ein Modell-Repository mit der Syntax herunterladen",
+  "REQUEST_LLM_MODEL_DESCRIPTION": "Sie können ein Modell-Repository mit folgender Syntax herunterladen",
   "REQUEST_LLM_MODEL_EXAMPLE": "<Namespace>/<Repo-Name>, z.B. 'facebook/opt-1.3b'",
   "REQUEST_LLM_SINGLE_EXAMPLE": "<Namespace>/<Repo-Name>/<Dateipfad>, z.B. 'microsoft/Phi-3-mini-4k-instruct-gguf/Phi-3-mini-4k-instruct-q4.gguf'",
   "REQUEST_LLM_MODEL_DISCLAIMER_1": "Hinweis: Nicht jedes Modell auf huggingface.co ist für die Aufgabe geeignet, die Sie ausführen möchten.",
-  "REQUEST_LLM_MODEL_DISCLAIMER_2": "Lesen Sie die Modell-Einführung und -Anforderungen sorgfältig durch, bevor Sie es herunterladen.",
-  "DOWNLOADER_CONFRIM_TIP": "Ihnen fehlt ein oder mehrere Modelle, die zum Ausführen erforderlich sind. Möchten Sie die Modelle herunterladen, die unten aufgeführt sind?",
+  "REQUEST_LLM_MODEL_DISCLAIMER_2": "Lesen Sie die Modell-Einführung und die Modell-Anforderungen sorgfältig durch, bevor Sie es herunterladen.",
+  "DOWNLOADER_CONFRIM_TIP": "Es fehlen eine oder mehrere erforderliche Modelle zum Ausführen. Möchten Sie die Modelle, die unten aufgeführt sind, herunterladen?",
   "DOWNLOADER_MODEL": "Modell",
   "DOWNLOADER_INFO": "Info",
   "DOWNLOADER_FILE_SIZE": "Dateigröße",
-  "DOWNLOADER_GATED": "Gesperrt",
-  "DOWNLOADER_GATED_TOKEN": "Überprüfen Sie, ob Sie einen gültigen huggingface.co-API-Token in Ihren Einstellungen hinzugefügt haben. ",
+  "DOWNLOADER_GATED": "Zugangsbeschränkt",
+  "DOWNLOADER_GATED_TOKEN": "Überprüfen Sie, ob Sie ein gültiges huggingface.co API-Token in Ihren Einstellungen hinzugefügt haben. ",
   "DOWNLOADER_ACCESS_INFO_SINGLE": "Sie haben keinen Zugriff auf das Modell, das Sie herunterladen möchten",
-  "DOWNLOADER_GATED_ACCEPT_SINGLE": "Das Modell ist gesperrt. Bitte besuchen Sie die Modell-Info-Seite und beantragen Sie den Zugriff. ",
+  "DOWNLOADER_GATED_ACCEPT_SINGLE": "Das Modell ist zugangsbeschränkt. Bitte besuchen Sie die Modell-Info-Seite und beantragen Sie den Zugriff. ",
   "DOWNLOADER_ACCESS_ACCEPT_SINGLE": "Ein unzugängliches Modell kann nicht heruntergeladen werden.",
   "DOWNLOADER_ACCESS_INFO": "Sie haben keinen Zugriff auf einige Modelle, die Sie herunterladen möchten",
-  "DOWNLOADER_GATED_ACCEPT": "Einige Modelle sind gesperrt. Bitte besuchen Sie die Modell-Info-Seite und beantragen Sie den Zugriff. ",
+  "DOWNLOADER_GATED_ACCEPT": "Einige Modelle sind zugangsbeschränkt. Bitte besuchen Sie die Modell-Info-Seite und beantragen Sie den Zugriff. ",
   "DOWNLOADER_ACCESS_ACCEPT": "Unzugängliche Modelle werden nicht heruntergeladen.",
   "DOWNLOADER_REASON": "Typ",
   "DOWNLOADER_TERMS": "Besuchen",
@@ -172,39 +172,39 @@
   "DOWNLOADER_CONFLICT": "Ein anderer Download-Vorgang ist derzeit im Gange und ein neuer Vorgang kann nicht gestartet werden. Sie können den aktuellen Download-Vorgang abbrechen und einen neuen Download-Vorgang starten",
   "DOWNLOADER_TERMS_TIP": "Ich habe die Modellkarte(n) und Lizenz(en) überprüft. Ich stimme allen Bedingungen und Konditionen zu und möchte die Drittanbieter-Modelle herunterladen.",
   "DOWNLOADER_FOR_ANSWER_GENERATE": "Antwort-Modell",
-  "DOWNLOADER_FOR_RAG_QUERY": "RAG-Abfrage-Modell",
+  "DOWNLOADER_FOR_RAG_QUERY": "RAG-Embed-Modell",
   "DOWNLOADER_FOR_IMAGE_GENERATE": "Bild-Modell",
   "DOWNLOADER_FOR_INAPINT_GENERATE": "Inpaint/Outpaint-Modell",
-  "DOWNLOADER_FOR_IMAGE_PREVIEW": "Bild-Vorschau-Modell",
-  "DOWNLOADER_FOR_IMAGE_UPSCALE": "Bild-Auflösung-Modell",
-  "DOWNLOADER_FOR_IMAGE_LORA": "Schnelles Bild-Modell",
+  "DOWNLOADER_FOR_IMAGE_PREVIEW": "Image-Preview-Modell",
+  "DOWNLOADER_FOR_IMAGE_UPSCALE": "Image-Upscale-Modell",
+  "DOWNLOADER_FOR_IMAGE_LORA": "Fast-Image-Modell",
   "DOWNLOADER_DONWLOAD_TASK_PROGRESS": "Modell-Downloads abgeschlossen",
-  "RAG_FILE_TOTAL_FORMAT": "Datei-Gesamtzahl: {total}",
+  "RAG_FILE_TOTAL_FORMAT": "Gesamtzahl: {total}",
   "RAG_DRAG_UPLOAD": "Dateien per Drag-and-Drop hochladen",
-  "RAG_DRAG_UPLOAD_UNSUPPORTED": "Das aktuelle Programm wird mit Administrator-Rechten gestartet. Aufgrund von Windows-UAC-Einschränkungen kann das Drag-and-Drop-Upload nicht verwendet werden. Bitte verwenden Sie die Schaltfläche zum Hochladen von Dateien oben.",
+  "RAG_DRAG_UPLOAD_UNSUPPORTED": "Das aktuelle Programm wird mit Administrator-Rechten gestartet. Aufgrund von Windows-UAC-Einschränkungen kann das Drag-and-Drop-Upload nicht verwendet werden. Bitte verwenden Sie den Hinzufügen-Button oben, um Dateien hochzuladen.",
   "RAG_UPLOAD_MIME_TYPE": "Unterstützte Dateitypen:\n\tTextdokument: .txt .md\n\tOffice-Dokument: .doc(x)\n\tPDF-Dokument: .pdf",
-  "RAG_ENABLE_TIP": "Antworten auf hochgeladene Dateien",
+  "RAG_ENABLE_TIP": "Antworten nur auf hochgeladene Dateien",
   "RAG_UPLOAD_TYPE_ERROR": "Es gibt einen nicht unterstützten Dateityp in der hochgeladenen Datei, der automatisch ausgeschlossen wurde",
   "RAG_UPLOAD_FILE_EXISTS": "Die hochgeladene Datei {filename} existiert bereits",
-  "RAG_ANALYZE_FILE_FAILED": "Die Datei {filename} konnte nicht analysiert werden",
+  "RAG_ANALYZE_FILE_FAILED": "Die Analyse der Datei {filename} ist fehlgeschlagen.",
   "RAG_USE_REJECT": "Die interaktive Dokumentenliste ist leer, bitte laden Sie das Dokument zuerst hoch",
-  "RAG_WHEN_CLOSE_PANEL_AT_UPLODING": "Bitte warten Sie, bis alle Dokumente analysiert wurden",
-  "RAG_SOURCE": "Von Quelle:",
-  "ERR_NOT_ENOUGH_DISK_SPACE": "Nicht genug Festplattenspeicherplatz. Es werden {requires_space} benötigt, aber nur {free_space} Festplattenspeicherplatz sind verfügbar",
-  "ERR_DOWNLOAD_FAILED": "Modell-Datei-Download fehlgeschlagen",
+  "RAG_WHEN_CLOSE_PANEL_AT_UPLODING": "Warten Sie bitte, bis die Analyse aller Dokumente abgeschlossen ist",
+  "RAG_SOURCE": "Quelle:",
+  "ERR_NOT_ENOUGH_DISK_SPACE": "Nicht genug Speicherplatz. Es werden {requires_space} benötigt, aber nur {free_space} Speicherplatz sind verfügbar",
+  "ERR_DOWNLOAD_FAILED": "Download der Modell-Datei fehlgeschlagen",
   "ERROR_RUNTIME_ERROR": "Wenn ein kritischer Fehler auftritt, bitte das Programm neu starten und erneut versuchen",
-  "ERROR_GENERATE_UNKONW_EXCEPTION": "Ein unbekannter Fehler ist aufgetreten. Die Generierung aus dem Modell ist fehlgeschlagen",
+  "ERROR_GENERATE_UNKONW_EXCEPTION": "Ein unbekannter Fehler ist aufgetreten. Bildgenerierung aus dem Modell fehlgeschlagen.",
   "ERROR_FOLDER_NOT_EXISTS": "Das angegebene Verzeichnis existiert nicht",
   "ERROR_REPO_NOT_EXISTS": "Die angegebene Repository-ID konnte nicht gefunden werden",
   "ERROR_ALREADY_IN_MODELS": "Das angegebene Modell ist bereits in der Liste",
-  "ERROR_ENHANCE_IMAGE_NOT_SET": "Bitte konfigurieren Sie das Eingabebild, bevor Sie generieren",
-  "ERROR_UNFOUND_GRAPHICS": "Wenn die notwendige Hardware für die Programmausführung auf dem Computergerät nicht erkannt wird, wird das Programm beendet, wenn Sie auf OK klicken.",
+  "ERROR_ENHANCE_IMAGE_NOT_SET": "Bitte konfigurieren Sie das Eingabebild, das generiert werden soll",
+  "ERROR_UNFOUND_GRAPHICS": "Wenn die notwendige Hardware für die Programmausführung auf dem Computer nicht erkannt wird, wird das Programm beendet, falls Sie auf OK klicken.",
   "ERROR_PYTHON_BACKEND_INIT": "Backend-Initialisierung fehlgeschlagen",
-  "ERROR_PYTHON_BACKEND_INIT_DETAILS_TEXT": "Die Initialisierung des KI-Inferenz-Backends ist fehlgeschlagen. Bitte versuchen Sie, die Anwendung neu zu starten. Wenn das Problem persistiert, können Sie die Details für weitere Informationen über den Fehler überprüfen.",
+  "ERROR_PYTHON_BACKEND_INIT_DETAILS_TEXT": "Die Initialisierung des KI-Inferenz-Backends ist fehlgeschlagen. Bitte versuchen Sie, die Anwendung neu zu starten. Wenn das Problem bestehen bleibt, können Sie die Details für weitere Informationen über den Fehler checken.",
   "ERROR_PYTHON_BACKEND_INIT_DETAILS": "Details",
   "ERROR_PYTHON_BACKEND_INIT_OPEN_LOG": "Log-Datei öffnen",
   "WARNING_MODEL_TYPE_WRONG": "Der Modelltyp scheint nicht den Anforderungen zu entsprechen. Sind Sie sicher, dass Sie fortfahren möchten?",
-  "BACKEND_MANAGE": "AI-Playground-Einrichtung",
+  "BACKEND_MANAGE": "AI-Playground-Setup",
   "BACKEND_REQUIRED_COMPONENTS": "Erforderliche Komponenten",
   "BACKEND_OPTIONAL_COMPONENTS": "Optionale Komponenten",
   "BACKEND_SINGLE_COMPONENT": "Komponente ",
@@ -215,9 +215,9 @@
   "BACKEND_ACTION": "Aktion",
   "BACKEND_REQUIRED": "Erforderlich",
   "BACKEND_OPTIONAL": "Optional",
-  "BACKEND_REQUIRED_COMPONENTS_MESSAGE": "Bevor Sie die Intel AI-Playground verwenden können, müssen einige zusätzliche Komponenten herunterladen werden. Bitte stellen Sie sicher, dass Sie eine stabile und ungemessene Internetverbindung haben.",
+  "BACKEND_REQUIRED_COMPONENTS_MESSAGE": "Bevor Sie die Intel AI-Playground verwenden können, müssen einige zusätzliche Komponenten herunterladen werden. Bitte stellen Sie sicher, dass Sie eine stabile und unlimitierte Internetverbindung haben.",
   "BACKEND_OPTIONAL_COMPONENTS_MESSAGE": "Optionale Komponenten sind nicht erforderlich, um die AI-Playground zu verwenden, bieten aber erweiterte Funktionen. Wenn Sie sie verwenden möchten, klicken Sie bitte auf die Info-Schaltflächen, um sich mit den Nutzungsbedingungen vertraut zu machen, bevor Sie sie aktivieren.",
-  "BACKEND_TERMS_AND_CONDITIONS": "* Ich habe die optionale Komponente überprüft. Ich stimme allen Nutzungsbedingungen zu und möchte die Drittanbieter-Software herunterladen und aktivieren, wenn anwendbar.",
+  "BACKEND_TERMS_AND_CONDITIONS": "* Ich habe die optionale Komponente überprüft. Ich stimme allen Nutzungsbedingungen zu und möchte die Drittanbieter-Software herunterladen und aktivieren, falls sie anwendbar ist.",
   "BACKEND_STATUS_RUNNING": "Läuft",
   "BACKEND_STATUS_STOPPING": "Beendet",
   "BACKEND_STATUS_STARTING": "Startet",
@@ -229,7 +229,7 @@
   "SETTINGS_IMAGE_WORKFLOW": "Workflow",
   "SETTINGS_IMAGE_DEFAULT": "Default",
   "SETTINGS_IMAGE_COMFY_REFERENCE_IMAGE": "Referenzbild",
-  "SETTINGS_IMAGE_COMFY_FILENAME_PREFIX": "Dateipräfix",
+  "SETTINGS_IMAGE_COMFY_FILENAME_PREFIX": "Dateinamenspräfix",
   "SETTINGS_IMAGE_COMFY_CANNY_LOW_THRESHOLD": "Canny - Niedriger Threshold",
   "SETTINGS_IMAGE_COMFY_CANNY_HIGH_THRESHOLD": "Canny - Hoher Threshold",
   "SETTINGS_IMAGE_COMFY_ACTIVATE_FACESWAP": "FaceSwap aktivieren",
@@ -238,7 +238,7 @@
   "SETTINGS_IMAGE_COMFY_NEW_FACE_IMAGE": "Neues Gesichtsbild",
   "WORKFLOW_RELOAD_INFO": "Workflows von der Festplatte laden.",
   "WORKFLOW_DOWNLOAD_INFO": "Neueste Workflows herunterladen und vorhandene Workflows sichern.",
-  "WORKFLOW_HIGH_VRAM_INFO": "Dieses Modell erfordert viel VRAM. Reduzieren Sie bei Leistungsproblemen die Auflösung und/oder starten Sie den ComfyUI-Backend-Neustart.",
+  "WORKFLOW_HIGH_VRAM_INFO": "Dieses Modell erfordert viel VRAM. Reduzieren Sie bei Leistungsproblemen die Auflösung und/oder starten Sie das ComfyUI-Backend neu.",
   "WORKFLOW_HIGH_VRAM_WARNING": "hohes VRAM erforderlich",
   "LOADING_VERIFYING_BACKENDS": "Backends überprüfen",
   "LOADING_AI_PLAYGROUND_LOADING": "AI-Playground lädt"
